# flask-plugins

./: .coveralls.yml  .gitignore  .travis.yml  AUTHORS  CHANGES  CHANGES.rst  LICENSE  MANIFEST.in  Makefile  README.md  dev-requirements.txt  pyproject.toml  setup.py  tox.ini
.github/workflows/: pre-commit.yaml  tests.yaml
docs/: conf.py  index.rst
docs/_templates/: sidebarintro.html
example/: app.py  hooks.py
example/plugins/hello_world/: __init__.py  info.json
example/plugins/hello_world/templates/: hello.html
example/templates/: index.html  layout.html
flask_plugins/: __init__.py  _compat.py
src/flask_plugins/: __init__.py
tests/: conftest.py  eventmanager_tests.py  hook_tests.py  hookmanager_tests.py  plugin_tests.py  pluginmanager_tests.py  test_eventmanager.py  test_plugin.py  test_pluginmanager.py
tests/plugins/test1/: __init__.py  info.json
tests/plugins/test2/: __init__.py  info.json
tests/plugins/test3/: __init__.py  info.json  license.txt
tests/plugs/wrong/: __init__.py
